# cirs_boids

./: CMakeLists.txt  README.md  macros.cmake  package.xml
blend_sim/: fishes.blend
config/: boids.yaml  boids_rrt.yaml  viz.rviz
include/cirs_boids/: CarPlanner.h  Flock.hpp  RRT.hpp
launch/: stonefish_boids.launch  viz_boids.launch
scenarios/: boids.scn  peixos.scn
scripts/: stonefish_boids copy.cpp  stonefish_boids.cpp  stonefish_boids2.cpp  viz_boids.cpp
src/: CarPlanner.cpp  Flock.cpp  RRT.cpp
